--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
   align-items: center;
   gap: 10px;
   background-color: antiquewhite;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 #heading {
